--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_map:
+  geocoder:
 
 
 # For information on the generic Dart part of this file, see the
