--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mongo_dart: ^0.3.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -29,6 +30,9 @@ dev_dependencies:
     sdk: flutter
   flutter_map:
   geocoder:
+  pedantic: ^1.0.0
+  test: ^1.0.0
+
 
 
 # For information on the generic Dart part of this file, see the
